--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'io.gitlab.wmwtr:spring-boot-devtools:1.0.0.RELEASE'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
